--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,19 @@
 {
-    "compilerOptions": {
-        "target": "esnext",
-        "module": "esnext",
-        "moduleResolution": "bundler",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "outDir": "./dist",
-        "rootDir": ".",
-        "baseUrl": "./",
-       "paths": {
-            "@/*": ["src/*"],
-            "src/*": ["src/*"]
-        }
-    },
-    
+   "compilerOptions": {
+      "target": "esnext",
+      "baseUrl": "./",
+      "rootDir": ".",
+      "module": "esnext",
+      "moduleResolution": "bundler",
+      "paths": {
+         "@/*": ["src/*"],
+         "@@/*": ["./*"]
+      },
+      "strict": true,
+      "outDir": "./dist",
+      "esModuleInterop": true,
+      "forceConsistentCasingInFileNames": true,
+      "skipLibCheck": true
+   },
+   "include": ["**/*"]
 }
