--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "dependencies": {
+      "type-fest": "^4.41.0",
       "ufo": "^1.5.4"
    },
    "devDependencies": {
