--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
       "forceConsistentCasingInFileNames": true,
       "skipLibCheck": true
    },
-   "include": ["**/*"]
+   "include": ["src/**/*.ts", "src/**/*.d.ts", "playground/**/*.ts"]
 }
