--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-   "name": "restql",
+   "name": "@yassidev/restql",
    "type": "module",
-   "version": "1.0.0",
+   "version": "0.0.1",
+   "private": false,
    "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6",
-   "description": "",
-   "author": "",
+   "description": "A unified REST query system for SQL databases.",
+   "author": "Yasser Lahbibi<yasser.lahbibi@apenhet.com>",
    "license": "ISC",
    "keywords": [],
    "exports": {
